--- a/index.html
+++ b/index.html
@@ -2,24 +2,34 @@
  
 <head>
 <title>home</title>
-<link rel="stylesheet" type="/text/css" href="css/web.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="css/web.css" media="screen" />
 </head>
  
 <body>
 
-<div id"header">
+<div id="header">
 
-<div id"logotipo"></div>
-<div id"menu">
+<div id="logotipo"></div>
 
-  <ul>
-  <li>Inicio</li>
-  <li>Noticias</li>
-  <li>Artículos</li>
-  <li>Contacto</li>
-  </ul>
+<div id="menu">
 
-	</div>
+<ul id="botones">
+
+<li><a href=””>Contacto</a></li>
+<li><a href=””>Producto</a></li>
+<li><a href=””>Empresa</a></li>
+<li><a href=””>Home</a></li>
+
+</ul>
+</div>
+
+
+</div>
+<div id="linea"></div>
+
+<div id="content">
+
+
 
 </div>
 
