--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <title>home</title>
 <link rel="stylesheet" type="text/css" href="css/web.css" media="screen" />
+
+<!-- Start WOWSlider.com HEAD section -->
+	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
+	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<!-- End WOWSlider.com HEAD section -->
 </head>
  
 <body>
@@ -23,13 +28,122 @@
 </ul>
 </div>
 
-
 </div>
+
 <div id="linea"></div>
 
 <div id="content">
 
+<div id="galeria">
 
+<!-- Start WOWSlider.com BODY section -->
+	<div id="wowslider-container1">
+	<div class="ws_images"><ul>
+<li><img src="data1/images/chrysanthemum.jpg" alt="Chrysanthemum" title="Chrysanthemum" id="wows1_0"/></li>
+<li><img src="data1/images/desert.jpg" alt="Desert" title="Desert" id="wows1_1"/></li>
+<li><img src="data1/images/hydrangeas.jpg" alt="Hydrangeas" title="Hydrangeas" id="wows1_2"/></li>
+<li><img src="data1/images/jellyfish.jpg" alt="Jellyfish" title="Jellyfish" id="wows1_3"/></li>
+<li><img src="data1/images/koala.jpg" alt="Koala" title="Koala" id="wows1_4"/></li>
+<li><img src="data1/images/lighthouse.jpg" alt="Lighthouse" title="Lighthouse" id="wows1_5"/></li>
+<li><img src="data1/images/penguins.jpg" alt="Penguins" title="Penguins" id="wows1_6"/></li>
+<li><img src="data1/images/tulips.jpg" alt="Tulips" title="Tulips" id="wows1_7"/></li>
+</ul></div>
+<div class="ws_bullets"><div>
+<a href="#" title="Chrysanthemum"><img src="data1/tooltips/chrysanthemum.jpg" alt="Chrysanthemum"/>1</a>
+<a href="#" title="Desert"><img src="data1/tooltips/desert.jpg" alt="Desert"/>2</a>
+<a href="#" title="Hydrangeas"><img src="data1/tooltips/hydrangeas.jpg" alt="Hydrangeas"/>3</a>
+<a href="#" title="Jellyfish"><img src="data1/tooltips/jellyfish.jpg" alt="Jellyfish"/>4</a>
+<a href="#" title="Koala"><img src="data1/tooltips/koala.jpg" alt="Koala"/>5</a>
+<a href="#" title="Lighthouse"><img src="data1/tooltips/lighthouse.jpg" alt="Lighthouse"/>6</a>
+<a href="#" title="Penguins"><img src="data1/tooltips/penguins.jpg" alt="Penguins"/>7</a>
+<a href="#" title="Tulips"><img src="data1/tooltips/tulips.jpg" alt="Tulips"/>8</a>
+</div></div>
+
+	<div class="ws_shadow"></div>
+	</div>
+	<script type="text/javascript" src="engine1/wowslider.js"></script>
+	<script type="text/javascript" src="engine1/script.js"></script>
+	<!-- End WOWSlider.com BODY section -->
+
+</div>
+
+<div id="cajas">
+
+<div id="caja1">
+
+<img src="img/caja1.JPG">
+
+<h1 class="titulos">Productos Deportivos </h1>
+
+<p class="subtitulos"> Nike Free Dama Modelo 2013</p>
+
+<p class="informacion">Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos.</p>
+
+</div>
+
+<div id="caja2">
+
+<img src="img/caja1.JPG">
+
+<h1 class="titulos">Productos Deportivos </h1>
+
+<p class="subtitulos"> Nike Free Dama Modelo 2013</p>
+
+<p class="informacion">Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos.</p>
+
+</div>
+
+<div id="caja3">
+
+<img src="img/caja1.JPG">
+
+<h1 class="titulos">Productos Deportivos </h1>
+
+<p class="subtitulos"> Nike Free Dama Modelo 2013</p>
+
+<p class="informacion">Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos.</p>
+
+</div>
+
+<div id="caja4">
+
+<img src="img/caja1.JPG">
+
+<h1 class="titulos">Productos Deportivos </h1>
+
+<p class="subtitulos"> Nike Free Dama Modelo 2013</p>
+
+<p class="informacion">Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos.</p>
+
+</div>
+
+<div id="caja5">
+
+<img src="img/caja1.JPG">
+
+<h1 class="titulos">Productos Deportivos </h1>
+
+<p class="subtitulos"> Nike Free Dama Modelo 2013</p>
+
+<p class="informacion">Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos.</p>
+
+</div>
+
+<div id="caja6">
+
+<img src="img/caja1.JPG">
+
+<h1 class="titulos">Productos Deportivos </h1>
+
+<p class="subtitulos"> Nike Free Dama Modelo 2013</p>
+
+<p class="informacion">Entrena con una flexibilidad natural. Las zapatillas Nike Free para mujer y para hombre incorporan profundas ranuras flexibles que favorecen los movimientos multidireccionales. Además, ofrecen una mayor flexibilidad para que puedas sacar el máximo partido a tus entrenamientos.</p>
+
+</div>
+
+
+
+</div>
 
 </div>
 
